--- a/src/components/PetGroupCard.css
+++ b/src/components/PetGroupCard.css
@@ -13,12 +13,17 @@
     max-width: 75%;
     max-height: 100%;
     background-color: #00bf63;
-    
+    border-color: #00bf63;
 }
     .pet-button:hover {
         max-width: 75%;
         max-height: 100%;
         background-color: #01592f;
+        border-color: #01592f;
+    }
+    .pet-button:active {
+        background-color: lawngreen !important;
+        border-color: lawngreen !important;
     }
 .play-date {
     background-image: url('bg2.jpg');
